testsuite/tests/semantic_errors/invalid_binop_int_and_real/test.out
Analyzing test.adb
##################

Resolving xrefs for node <ObjectDecl ["X"] test.adb:2:4-2:27>
*************************************************************

test.adb:2:21: error: no matching operator found
2 |    X : Integer := 2 + 2.4;
  |                     ^


Resolving xrefs for node <IfStmt test.adb:5:4-7:11>
***************************************************

test.adb:5:9: error: no matching operator found
5 |    if X < 4.5 then
  |         ^



Done.
